refactor(question): 拆分题目查询与写入职责